# llm-lmstudio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  llm_lmstudio.py  pyproject.toml  shell.nix
.github/workflows/: publish.yml  test.yml
demos/: demo_complete.py  demo_thinking_separation.py  demo_tools.py
tests/: README.md  test_async.py  test_end_to_end.py  test_llm_lmstudio.py  test_llm_lmstudio_async.py  test_lmstudio_direct.py  test_thinking_analysis.py
tests/cassettes/: test_async_prompt_non_streaming.yaml  test_async_prompt_schema.yaml  test_async_prompt_streaming.yaml  test_lmstudio_async_prompt_round_trip.yaml  test_lmstudio_sync_prompt_round_trip.yaml
